add scale and max size options

--- a/src/jcrop-fileinput.scss
+++ b/src/jcrop-fileinput.scss
@@ -1,5 +1,6 @@
 .jcrop-base-button {
-  background-color: #0060DF;
+  font-weight: bold;
+  background-color: #0030AF;
   border: none;
   color: #EEE;
   padding: 7px 14px; 
