--- a/src/jcrop-fileinput.scss
+++ b/src/jcrop-fileinput.scss
@@ -9,10 +9,6 @@
 }
 
 .jcrop-fileinput-wrapper {
-  border-radius: 2px;
-  position: relative;
-  overflow: hidden;
-  z-index: 2;
   input[type=file] {
     font-size: 300px;
     height: 1000px;
@@ -24,6 +20,10 @@
     z-index: 0;
   }
   button {
+    border-radius: 2px;
+    position: relative;
+    overflow: hidden;
+    z-index: 2;
     @extend .jcrop-base-button;
   }
 }
@@ -40,6 +40,15 @@
 
 .jcrop-fileinput-container {
   display: none;
+}
+
+.jcrop-fileinput-thumbnail {
+  width: 50px;
+  height: 50px;
+  padding: 5px;
+  border-radius: 2px;
+  border: 1px solid #DEDEDE;
+  vertical-align: middle;
 }
 
 // Workaround bug in JCrop (https://github.com/tapmodo/Jcrop/issues/36)
