--- a/src/jcrop-fileinput.scss
+++ b/src/jcrop-fileinput.scss
@@ -49,6 +49,7 @@
   border-radius: 2px;
   border: 1px solid #DEDEDE;
   vertical-align: middle;
+  margin-right: 20px;
 }
 
 // Workaround bug in JCrop (https://github.com/tapmodo/Jcrop/issues/36)
