--- a/src/jcrop-fileinput.scss
+++ b/src/jcrop-fileinput.scss
@@ -19,7 +19,8 @@
     position: absolute;
     right: 0;
     top: 0;
-    opacity: 1;
+    opacity: 0;
+    filter: alpha(opacity = 0);
     cursor: pointer;
     z-index: 0;
   }
