--- a/src/jcrop-fileinput.scss
+++ b/src/jcrop-fileinput.scss
@@ -5,7 +5,7 @@
   padding: 7px 14px;
   border-radius: 2px;
   font-size: 0.8em;
-  margin: 0 10px;
+  margin: 0 10px 0 0;
 }
 
 .jcrop-fileinput-fakebutton {
@@ -46,6 +46,13 @@
   border: 1px solid #DEDEDE;
   vertical-align: top;
   margin-right: 10px;
+  float: left;
+}
+
+.jcrop-fileinput-status {
+  color: #999;
+  font-size: 0.85em;
+  padding: 7px;
 }
 
 // Workaround bug in JCrop (https://github.com/tapmodo/Jcrop/issues/36)
