--- a/src/jcrop-fileinput.scss
+++ b/src/jcrop-fileinput.scss
@@ -39,6 +39,10 @@
 }
 
 .jcrop-fileinput-thumbnail {
+  img {
+    max-width: 50px;
+    max-height: 50px;
+  }
   width: 50px;
   height: 50px;
   padding: 5px;
